[package]
name = "frontend"
version = "0.1.0"
authors = ["Midnight Exigent <6959267-midnightexigent@users.noreply.gitlab.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = "0.19"
strum_macros = "0.19"
serde = "1"
serde_derive = "1"
wasm-bindgen = "0.2.60"
yew = "0.17"

[lib]
crate-type = ["cdylib", "rlib"]
